--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,7 +1,7 @@
 <section class="search-container">
     <h2>Search Recipes</h2>
-    <form method="post">
-        <input type="text" id="search" name="search" placeholder="Search for recipes...">
+    <form method="get">
+        <input type="text" id="search" name="title" placeholder="Search for recipes...">
         <button type="submit">Search</button>
     </form>
     <div class="search-results">
